--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Attrs.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Attrs.cshtml
@@ -16,7 +16,7 @@
 	}
 }
 
-<table class="pd-attrs">
+<table class="pd-attrs pd-group">
 	@if (Model.ShowSku && Model.Sku.HasValue())
 	{
 		<tr class="pd-attr-sku">
