--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasCart.cshtml
@@ -8,7 +8,7 @@
         </button>
     </div>
 
-    <ul class="nav nav-tabs" role="tablist">
+    <ul class="nav nav-tabs nav-tabs-line" role="tablist">
         @if (Model.ShoppingCartEnabled)
         {
             <li class="nav-item">
