--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.StockInfo.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.StockInfo.cshtml
@@ -3,38 +3,61 @@
 @using SmartStore.Web.Models.Catalog;
 
 @{
-	var showAttrs = (Model.DisplayDeliveryTime && Model.IsShipEnabled)
-		|| Model.StockAvailability.HasValue()
-		|| Model.DisplayBackInStockSubscription;
+	var displayStock = Model.StockAvailability.HasValue();
+	// Never show delivery time when product is out of stock AND stock is displayed
+	var displayDeliveryTime = (Model.DisplayDeliveryTime && Model.IsShipEnabled) && (!displayStock || (displayStock && Model.IsAvailable));
 
+	var showAttrs = displayDeliveryTime || displayStock || Model.DisplayBackInStockSubscription;
 	if (!showAttrs)
 	{
 		return;
 	}
+
+	var statusLabel = Model.DisplayDeliveryTimeAccordingToStock ? Model.DeliveryTimeName : Model.StockAvailability;
+	var statusColor = Model.DisplayDeliveryTimeAccordingToStock && !displayStock ? Model.DeliveryTimeHexValue : "";
 }
 
-<div class="pd-group pd-delivery-info">
-	@if (Model.StockAvailability.HasValue())
+<div class="pd-group pd-stock-info">
+	@if (displayStock)
 	{
-		<div class="pd-stock p-b-05">
-			@Model.StockAvailability
-		</div>
+		<div class="pd-stock @(Model.IsAvailable ? "pd-instock" : "pd-outofstock")">@Model.StockAvailability</div>
 	}
-	@if (Model.DisplayDeliveryTime && Model.IsShipEnabled)
+
+
+	@if (displayDeliveryTime)
 	{
-		var statusLabel = Model.DisplayDeliveryTimeAccordingToStock ? Model.DeliveryTimeName : Model.StockAvailability;
-		<div>
-			<span class="p-r-05">@T("Products.DeliveryTime")</span>
-			<span class="delivery-time" title="@T("Products.DeliveryTime") @statusLabel" @Html.Attr("style", "color:" + Model.DeliveryTimeHexValue, Model.DisplayDeliveryTimeAccordingToStock)>
-				<i class="fa fa-circle delivery-time-status"></i>
+		<div class="pd-deliverytime">
+			<span>@T("Products.DeliveryTime")</span>
+			<span class="delivery-time" title="@T("Products.DeliveryTime") @statusLabel" @Html.Attr("style", "color: " + statusColor, statusColor.HasValue())>
+				@if (!displayStock)
+				{
+					<i class="fa fa-circle delivery-time-status"></i>
+				}
 				@statusLabel
 			</span>
 		</div>
 	}
+
 	@if (Model.DisplayBackInStockSubscription)
 	{
-		<div class="pd-attr-stocksub">
-			<span>@{ Html.RenderPartial("_BackInStockSubscription", Model); }</span>
+		<div class="pd-stocksub">
+			@if (!Model.IsCurrentCustomerRegistered)
+			{
+				<a href='@Url.RouteUrl("Login", new { ReturnUrl = Request.RawUrl })' rel="nofollow">@T("BackInStockSubscriptions.NotifyMeWhenAvailable")</a>
+			}
+			else
+			{
+				<a class="stock-subscriber" data-toggle="modal" href="#backinstock-subscription-modal" rel="nofollow">
+					@T("BackInStockSubscriptions.NotifyMeWhenAvailable")
+				</a>
+				<script>
+					$(function () {
+						$(".stock-subscriber").on('click', function (e) {
+							$("#backinstock-subscription-modal .modal-body").html('<iframe id="iframe-backinstocksubsription" src="@Url.Action("BackInStockSubscribe", new { id = @Model.Id })" width="600" height="170" scrolling="no" frameBorder="0" />');
+						});
+					});
+				</script>
+			}
 		</div>
 	}
 </div>
@@ -42,19 +65,21 @@
 
 @if (Model.DisplayBackInStockSubscription && Model.IsCurrentCustomerRegistered)
 {
-	@section end{{
-		<div id="back-in-stock-subscription-modal" class="modal fade" tabindex="-1">
+	using (Html.BeginTailSnippet())
+	{
+		<div id="backinstock-subscription-modal" class="modal fade" tabindex="-1">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-body">
 					</div>
 					<div class="modal-footer">
-						<button class="btn" data-dismiss="modal">@T("Common.OK")</button>
+						<button class="btn btn-secondary btn-flat" data-dismiss="modal">@T("Common.Cancel")</button>
+						<button class="btn btn-primary" data-dismiss="modal">@T("Common.OK")</button>
 					</div>
 				</div>
 			</div>
 		</div>
-	}}
+	}
 }
 
 
