--- a/src/Presentation/SmartStore.Web/Views/Product/Product.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Product.cshtml
@@ -25,6 +25,7 @@
 	 * - GTIN: user must specifiy the GTIN type on product level (gtin12, gtin13 etc.). See https://schema.org/Offer
 	 * - Reviews
 	 * - Reviews Microdata
+	 * - Qty input: make settings (Whether to display, Dropdown, Spinner)
 	 * - FIXME (mg) > no (discount) badges shown in products lists (with bundled products & PricePerBundleItems ON)
 	 */
 }
