--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shared/_nav.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shared/_nav.scss
@@ -140,7 +140,7 @@
                 font-size: $font-size-base;
             }
 
-            &:hover, &:focus {
+            &:hover {
                 color: $list-group-link-hover-color;
                 background-color: $list-group-hover-bg;
             }
