--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -63,6 +63,11 @@ $btn-padding-y-sm:              0.375rem; // 0.25rem
 $btn-padding-x-lg:              1.5rem; // 1.25rem
 $btn-padding-y-lg:              0.8725rem; // 0.75rem
 
+// Equalize input vertical paddings with button paddings
+$input-padding-y:               $btn-padding-y;
+$input-padding-y-sm:            $btn-padding-y-sm;
+$input-padding-y-lg:            $btn-padding-y-lg;
+
 
 /*$dropdown-border-color:     #ddd;
 $popover-border-color:      #ddd;
@@ -113,8 +118,9 @@ $pagination-active-border:      $pagination-border-color;
 @import "shared/_sortable-grip.scss";
 @import "shared/_utils.scss";
 @import "shared/select2/core.scss";
-@import "shared/offcanvas.scss";
+@import "shared/_offcanvas.scss";
 @import "shared/_animate.scss";
+@import "shared/_touchspin.scss";
 @import "photoswipe/photoswipe.scss";
 @import "slick/slick.scss";
 
