--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Actions.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Actions.cshtml
@@ -22,10 +22,10 @@
 		else
 		{
 			<div class="row">
-				<div class="col-xs-5 col-sm-4 x-col-md-5 p-r-0">
+				<div class="col-xs-4 col-sm-4 x-col-md-5 p-r-0">
 					@for (var i = 0; i <= 100; i++)
 					{
-						addModel.AllowedQuantities.Add(new SelectListItem { Text = "{0} {1}".FormatCurrent(i, Model.QuantityUnitName), Value = i.ToString() });
+						//addModel.AllowedQuantities.Add(new SelectListItem { Text = "{0} {1}".FormatCurrent(i, Model.QuantityUnitName), Value = i.ToString() });
 					}
 					@if (addModel.AllowedQuantities.Count > 0)
 					{
@@ -39,25 +39,11 @@
 					}
 					else
 					{
-						@Html.TextBoxFor(model => Model.AddToCart.EnteredQuantity, new { @class = "qty-input form-control x-form-control-lg", style = "x-height:100%; text-align: center" })
-						<script>
-                        $(function () {
-                            //TODO NewAlpha: implement step in admin product detail
-                            $(".qty-input").TouchSpin({
-                                min: @addModel.MinOrderAmount,
-                                max: @addModel.MaxOrderAmount,
-                                step: 1,
-                                buttondown_class: 'btn btn-secondary btn-flat',
-                                buttonup_class: 'btn btn-secondary btn-flat',
-                                buttondown_txt: '<i class="fa fa-minus"></i>',
-                                buttonup_txt: '<i class="fa fa-plus"></i>',
-                            });
-                        });
-						</script>
+						@Html.EditorFor(model => model.AddToCart, "QtyInput", new { large = true })
 					}
 				</div>
-				<div class="col-xs-7 col-sm-8 x-col-md-7 p-l-05">
-					<a class="btn btn-primary x-btn-lg btn-block add-to-cart-button ajax-cart-link"
+				<div class="col-xs-8 col-sm-8 x-col-md-7 p-l-05">
+					<a class="btn btn-primary btn-lg btn-block add-to-cart-button ajax-cart-link"
 					   href="#"
 					   rel="nofollow"
 					   data-href='@Url.Action("AddProduct", "ShoppingCart", new { productId = Model.AddToCart.ProductId, shoppingCartTypeId = (int)ShoppingCartType.ShoppingCart })'
