Added alias field for specification attribute and option

--- a/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdateOption.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdateOption.cshtml
@@ -28,6 +28,15 @@
         </td>
     </tr>
     <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.Locales[item].Alias)
+        </td>
+        <td class="adminData">
+            @Html.EditorFor(model => Model.Locales[item].Alias)
+            @Html.ValidationMessageFor(model => model.Locales[item].Alias)
+        </td>
+    </tr>
+    <tr>
         <td colspan="2">
             @Html.HiddenFor(model => model.Locales[item].LanguageId)
         </td>
@@ -42,6 +51,15 @@
         <td class="adminData">
             @Html.EditorFor(model => model.Name)
             @Html.ValidationMessageFor(model => model.Name)
+        </td>
+    </tr>
+	    <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.Alias)
+        </td>
+        <td class="adminData">
+            @Html.EditorFor(model => model.Alias)
+            @Html.ValidationMessageFor(model => model.Alias)
         </td>
     </tr>
 </table>
