--- a/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdate.cshtml
@@ -26,6 +26,15 @@
             </td>
         </tr>
         <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.Locales[item].Alias)
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => Model.Locales[item].Alias)
+                @Html.ValidationMessageFor(model => model.Locales[item].Alias)
+            </td>
+        </tr>
+        <tr>
             <td colspan="2">
                 @Html.HiddenFor(model => model.Locales[item].LanguageId)
             </td>
@@ -40,6 +49,15 @@
             <td class="adminData">
                 @Html.EditorFor(model => model.Name)
                 @Html.ValidationMessageFor(model => model.Name)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.Alias)
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => model.Alias)
+                @Html.ValidationMessageFor(model => model.Alias)
             </td>
         </tr>
     </table>
@@ -64,41 +82,42 @@
                 <tr>
                     <td>
                         @(Html.Telerik().Grid<SpecificationAttributeOptionModel>()
-                        .Name("specificationattributeoptions-grid")
-                            .DataKeys(x =>
-                            {
-                                x.Add(y => y.Id).RouteKey("optionId");
-                                x.Add(y => y.SpecificationAttributeId).RouteKey("specificationAttributeId");
-                            })
-                            .Columns(columns =>
-                            {
+						.Name("specificationattributeoptions-grid")
+							.DataKeys(x =>
+							{
+								x.Add(y => y.Id).RouteKey("optionId");
+								x.Add(y => y.SpecificationAttributeId).RouteKey("specificationAttributeId");
+							})
+							.Columns(columns =>
+							{
 								columns.Bound(x => x.Name);
-                                    //TODO display localized values here
-                                columns.Bound(x => x.DisplayOrder)
-                                    .Width(100)
-                                    .Centered();
-                                columns.Bound(x => x.Id)
-                                    .Width(120)
-                                    .Centered()
-                                    .ClientTemplate("<input type='submit' value='" + @T("Admin.Common.Edit").Text + "' onclick=\"" + "javascript:OpenWindow('" + @Url.Content("~/Admin/SpecificationAttribute/OptionEditPopup/") + "<#= Id #>?btnId=btnRefresh&formId=specificationattribute-form', 800, 250, true); return false;\" class='btn' />")
-                                    .Title(T("Admin.Common.Edit").Text);
-                                columns.Command(commands =>
-                                {
-                                    commands.Delete().Localize(T);
-                                })
-                                .Width(100)
-                                .Title(T("Admin.Common.Delete").Text);
-                            })
-                            .DataBinding(dataBinding => 
-                                dataBinding.Ajax().Select("OptionList", "SpecificationAttribute", new { specificationAttributeId = Model.Id })
-                                .Delete("OptionDelete", "SpecificationAttribute"))
-                            .EnableCustomBinding(true))
+								//TODO display localized values here
+								columns.Bound(x => x.Alias);
+								columns.Bound(x => x.DisplayOrder)
+									.Width(180)
+									.Centered();
+								columns.Bound(x => x.Id)
+									.Width(120)
+									.Centered()
+									.ClientTemplate("<input type='submit' value='" + @T("Admin.Common.Edit").Text + "' onclick=\"" + "javascript:OpenWindow('" + @Url.Content("~/Admin/SpecificationAttribute/OptionEditPopup/") + "<#= Id #>?btnId=btnRefresh&formId=specificationattribute-form', 800, 400, true); return false;\" class='btn' />")
+									.Title(T("Admin.Common.Edit").Text);
+								columns.Command(commands =>
+								{
+									commands.Delete().Localize(T);
+								})
+								.Width(120)
+								.Title(T("Admin.Common.Delete").Text);
+							})
+							.DataBinding(dataBinding =>
+								dataBinding.Ajax().Select("OptionList", "SpecificationAttribute", new { specificationAttributeId = Model.Id })
+								.Delete("OptionDelete", "SpecificationAttribute"))
+							.EnableCustomBinding(true))
                     </td>
                 </tr>
                 <tr>
                     <td width="100%">
                         <button type="submit" id="btnAddNewOption" name="btnAddNewOption" class="btn btn-below"
-							   onclick="javascript:OpenWindow('@(Url.Action("OptionCreatePopup", "SpecificationAttribute", new { specificationAttributeId = Model.Id, btnId = "btnRefresh", formId = "specificationattribute-form" }))', 800, 250, true); return false;">
+							   onclick="javascript:OpenWindow('@(Url.Action("OptionCreatePopup", "SpecificationAttribute", new { specificationAttributeId = Model.Id, btnId = "btnRefresh", formId = "specificationattribute-form" }))', 800, 400, true); return false;">
 							<i class="fa fa-plus"></i>&nbsp;@T("Admin.Catalog.Attributes.SpecificationAttributes.Options.AddNew")
 						</button>
                         <input type="submit" id="btnRefresh" name="btnRefresh" style="display: none" />
