New HtmlHelper extensions: BeginZoneContent() & RenderZone() (smarter alternative to annoying ASP.NET "sections")

--- a/src/Presentation/SmartStore.Web/Views/Common/ShopBar.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/ShopBar.cshtml
@@ -121,3 +121,12 @@
         }
     </div>
 </div>
+
+@using (Html.BeginZoneContent("end", key: "offcanvas-cart"))
+{
+	<aside id="offcanvas-cart" class="offcanvas offcanvas-push offcanvas-right">
+		<div class="offcanvas-content">
+			@Html.Action("OffCanvasCart", "ShoppingCart", new { area = "" })
+		</div>
+	</aside>
+}
