--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Picture.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Picture.cshtml
@@ -68,7 +68,7 @@
 	</div>
 </div>
 
-@using (Html.BeginTailSnippet("pswp"))
+@using (Html.BeginZoneContent("end", key: "pswp"))
 {
 	<!-- Root element of PhotoSwipe -->
 	<div id="pswp" class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
