--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shared/_touchspin.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shared/_touchspin.scss
@@ -45,7 +45,7 @@ $touchspin-btn-width:                1.6rem;
         }
 
         > .btn {
-            background: $input-bg;
+            background: transparent;
             border-width: 0;
             width: 100%;
             height: 100%;
