--- a/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
@@ -45,32 +45,32 @@
 	</div>
 }
 
-@section teaser {
-    @if (Model.DisplayCategoryBreadcrumb)
-    {
-        <ul id="breadcrumb" class="breadcrumb">
-            <li>
-                <a href="@Url.RouteUrl("HomePage")" title="@T("Categories.Breadcrumb.Top")"><i class="fa fa-home"></i></a>
-            </li>
+@if (Model.DisplayCategoryBreadcrumb)
+{
+	using (Html.BeginZoneContent("teaser", injectMode: ZoneInjectMode.Prepend))
+	{
+		<ul id="breadcrumb" class="breadcrumb">
+			<li>
+				<a href="@Url.RouteUrl("HomePage")" title="@T("Categories.Breadcrumb.Top")"><i class="fa fa-home"></i></a>
+			</li>
 
-            @for (int i = 0; i < Model.CategoryBreadcrumb.Count; i++)
-            {
-                var menuItem = Model.CategoryBreadcrumb[i];
-                var isLastCategory = menuItem.EntityId == Model.Id;
-                <li>
-                    @if (isLastCategory)
-                    {
-                        @menuItem.Text
-                    }
-                    else
-                    {
-                        <a href="@menuItem.GenerateUrl(this.Url)" title="@menuItem.Text">@menuItem.Text</a>
-                    }
-                </li>
-            }
-        </ul>
-        @Html.Widget("categorydetails_after_breadcrumb")
-    }
+			@for (int i = 0; i < Model.CategoryBreadcrumb.Count; i++)
+			{
+				var menuItem = Model.CategoryBreadcrumb[i];
+				var isLastCategory = menuItem.EntityId == Model.Id;
+				<li>
+					@if (isLastCategory)
+					{
+						@menuItem.Text
+					}
+					else
+					{
+						<a href="@menuItem.GenerateUrl(this.Url)" title="@menuItem.Text">@menuItem.Text</a>
+					}
+				</li>
+			}
+		</ul>
+	}
 }
 
 <div class="page category-page">
