--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shared/_touchspin.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shared/_touchspin.scss
@@ -8,6 +8,8 @@ $touchspin-btn-width:                1.6rem;
 
 // Added by SMNET 
 .bootstrap-touchspin {
+    display: inline-flex;
+
     .form-control {
         text-align: center;
         font-weight: bold;
