--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/_Notifications.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/_Notifications.cshtml
@@ -11,7 +11,14 @@
                 var sticky = type != "success" && type != "info";
                 var delay = type == "success" ? 2000 : 5000;
                 var notify = function () {
-                	EventBroker.publish("message", { text: el.html(), type: type, delay: delay, hide: !sticky });
+                	EventBroker.publish("message", {
+                		text: el.html(),
+                		type: type,
+                		delay: delay,
+                		hide: !sticky,
+                		icon: true,
+						shadow: false
+                	});
                 };
                 _.delay(notify, 100 * i);
             });
